# messaging

./: CMakeLists.txt  README.md
scripts/: README.md  client.py  server.py
src/: CMakeLists.txt  Main.cpp  client.cpp  server.cpp
src/log/: CMakeLists.txt  Log.cpp  Log.h
src/messaging/: CMakeLists.txt  client.cpp  client.h  server.cpp  server.h
src/socket/: CMakeLists.txt  client.cpp  client.h  clientSocket.cpp  clientSocket.h  server.cpp  server.h  serverSocket.cpp  serverSocket.h  socket.cpp  socket.h
src/thing/: CMakeLists.txt  Thing.cpp  Thing.h
src/ui/: CMakeLists.txt  input.cpp  input.h  output.cpp  output.h
tests/: CMakeLists.txt  MockLogger.h  test_main.cpp
tests/messaging/: CMakeLists.txt  testClient.cpp
tests/socket/: CMakeLists.txt  mockClientSocket.h  mockSocket.h  testClientSocket.cpp  testServer.cpp  testServerSocket.cpp  test_client.cpp
tests/tools/: timeout.h
tests/ui/: CMakeLists.txt  mockOutput.h  testOutput.cpp
